# cmake-mpi-example

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/: serial_integrate.hpp
include/cmake_mpi_example/: sample_library.hpp
src/: CMakeLists.txt  main.cpp  parallel_integrate.cpp  serial_integrate.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  parallel_integrate_tests.cpp  tests.cpp
